--- a/samuraj5.html
+++ b/samuraj5.html
@@ -13,15 +13,13 @@
             font-size: 26px;
         }
 
-        .div {
-            position: fixed;
-            width: 200px;
-            height: 200px;
-            cursor: pointer;
+        .h1 {
+           text-align: center;
+           margin: 20px 0;
             background-color: green;
         }
-        form{
-            
+        h3{
+            margin: 30px 0;   
         }
     </style>
 </head>
