--- a/samuraj5.html
+++ b/samuraj5.html
@@ -13,25 +13,71 @@
             font-size: 26px;
         }
 
-        .h1 {
-           text-align: center;
-           margin: 20px 0;
-            background-color: green;
+        .div {
+            font-family: roboto;
+            max-width: 80%;
+            margin:  20 px auto;
+        letter-spacing: 1px;
         }
-        h3{
-            margin: 30px 0;   
+        .cursor{
+            opacity: 1;
+
+            transition: .2s;
         }
+        .active{
+            opacity: 0;
+
+        }
+        
     </style>
 </head>
 
 <body>
-    <form>
-        <input type="text">
-        <button>Dodaj</button>
-    </form>
-    <div class="div"></div>
-    <script>
 
+    <div class="div">
+        <span class="text"></span>
+        <span class="cursor">|</span>
+    </div>
+
+
+    <script>
+        const spnText = document.querySelector(".text");
+        const spnCursor = document.querySelector(".cursor");
+        const txt = ["tekst1","tekst2","tekst3"];
+
+        let activeLetter = -5;
+        let activeText = 0;
+
+        const addLetter = () => {
+            console.log(activeLetter);
+
+            if(activeLetter >= 0){
+                spnText.textContent += txt[activeText][activeLetter];
+
+            }
+            activeLetter++;
+            console.log(activeLetter);
+
+            if(activeLetter === txt[activeText].length){
+                activeText++;
+
+                if(activeText === txt.length) return;
+
+                return setTimeout(() => {   
+                activeLetter = -5;
+                spnText.textContent = "";   
+                addLetter();
+                }, 2000);
+            }
+            setTimeout(addLetter,400);
+        }
+
+        addLetter();
+        
+        const cursorAnimation = () => {
+            spnCursor.classList.toggle("active");
+        }
+        setInterval(cursorAnimation,200);
     </script>
 </body>
 
