--- a/samuraj6.html
+++ b/samuraj6.html
@@ -11,38 +11,43 @@
             margin: 0;
             padding: 0;
         }
-        .header{
+
+        .header {
             width: 100%;
             height: 100vh;
             position: relative;
             overflow: hidden;
         }
-        img{
+
+        img {
             position: absolute;
             min-width: 100%;
             min-height: 100%;
             position: absolute;
             top: 50%;
-            left: 50%; 
-            transform: translate(-50%,-50%);
-           opacity: 0.6;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            opacity: 0.6;
         }
+
         h1 {
             position: absolute;
-           top: 50%;
-           left:50%;
-           transform: translate(-50%,-50%);
-           font-size: 40px;
-           font-family: Tahoma, sans-serif;
-           text-shadow: 0 0 6px white;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 40px;
+            font-family: Tahoma, sans-serif;
+            text-shadow: 0 0 6px white;
         }
-        .dots{
+
+        .dots {
             position: absolute;
             bottom: 30px;
             left: 50%;
             transform: translateX(-50%);
         }
-        .dots span{
+
+        .dots span {
             display: inline-block;
             background-color: #000;
             margin: 0 20px;
@@ -51,20 +56,20 @@
             border-radius: 50%;
             box-shadow: 0 0 0 5px white;
         }
+
         .dots span.active {
             box-shadow: 0 0 0 5px white, 0 0 3px 10px black;
         }
-        
     </style>
 </head>
 
 <body>
-    
+
     <header class="header">
         <img src="png/img1.jpg" alt="background" class="slider">
         <h1 class="slider"> Pierwszy</h1>
         <div class="dots">
-            <span id="one"></span>
+            <span class="active" id="one"></span>
             <span id="two"></span>
             <span id="three"></span>
         </div>
@@ -72,29 +77,79 @@
 
     <script>
         const slideList = [{
-            img: "png/img1.jpg",
-            text: "Pierwszy tekst"
-        },
-        { 
-            img: "png/img2.jpg",
-            text: "Drugi tekst"
-        },
-            { 
-            img: "png/img3.jpg",
-            text: "Trzeci tekst"
-        }];
+                img: "png/img1.jpg",
+                text: "Pierwszy tekst"
+            },
+            {
+                img: "png/img2.jpg",
+                text: "Drugi tekst"
+            },
+            {
+                img: "png/img3.jpg",
+                text: "Trzeci tekst"
+            }
+        ];
         const image = document.querySelector("img.slider");
         const h1 = document.querySelector("h1.slider");
-        // 
+        const dots = [...document.querySelectorAll(".dots span")];
+        // Interfejs 
         const time = 5000;
-        let active =0;
-        const changesSlide = () =>{
+        let active = 0;
+        // Implementacje
+
+        const changeDot = () => {
+            const activeDot = dots.findIndex(dot => dot.classList.contains("active"));
+            console.log(activeDot, active);
+            dots[activeDot].classList.remove("active");
+            dots[active].classList.add("active");
+        }
+        const changesSlide = () => {
             active++;
-            if(active==slideList.length)active=0;
+            if (active == slideList.length) active = 0;
+
             image.src = slideList[active].img;
             h1.textContent = slideList[active].text;
+            changeDot();
         }
-        setInterval(changesSlide,time);
+        let interval = setInterval(changesSlide, time);
+
+        const keyChangeActive = () => {
+            if (event.keyCode == 37 || event.keyCode == 39) {
+                clearInterval(interval);
+                event.keyCode == 37 ? active-- : active++;
+                if (active === slideList.length) {
+                    active = 0;
+                } else if (active < 0) {
+                    active = slideList.length - 1;
+                }
+                image.src = slideList[active].img;
+                h1.textContent = slideList[active].text;
+                changeDot();
+                interval = setInterval(changesSlide, time);
+            }
+            // switch (event.keyCode) {
+            //     case 39:
+            //         if (active < slideList.length - 1) {
+            //             active++;
+            //             image.src = slideList[active].img;
+            //             h1.textContent = slideList[active].text;
+            //             changeDot();
+            //         }
+
+            //         break;
+            //     case 37:
+            //         if (active) {
+            //             active--;
+            //             image.src = slideList[active].img;
+            //             h1.textContent = slideList[active].text;
+            //             changeDot();
+
+            //         }
+            //         break;
+            // }
+
+        }
+        window.addEventListener("keydown", keyChangeActive);
     </script>
 </body>
 
