--- a/appToDo.html
+++ b/appToDo.html
@@ -17,7 +17,7 @@
             background-color: cadetblue;
             background-color: dimgray;
 
-
+            overflow: hidden;
         }
         .editor{
             height: 20vh;
@@ -27,10 +27,11 @@
         }
         .main{
             min-height: 80vh;
-            width: 80%;
-            /* margin: 0 auto; */
+            height: 80vh;
+            width: 70%;
+            margin: 0 auto;
             min-height: 320px;
-            background: rgb(46, 48, 48);
+            /* background: rgb(46, 48, 48); */
             font-size: 1.2em;
             text-align: left;
 
@@ -42,7 +43,7 @@
             align-items: flex-start;
 
             box-sizing: border-box;
-            padding:0 5%;
+            /* padding:0 5%; */
         }
         .main__li{
             padding: 5%;
@@ -50,6 +51,9 @@
             background-color: cadetblue;
 
             width: 100%;
+            list-style-type: none;
+
+            transition: .5s;
         }
         .main__li:nth-of-type(even){
             background: rgb(46, 48, 48);
@@ -81,7 +85,7 @@
 
 
     </section>
-    <ol class="main">
+    <ul class="main">
         <li class="main__li">zadanie-1 
             <button class="main__button main__button--done">done</button> <button class="main__button main__button--delete">delete</button>   
         </li>
@@ -112,19 +116,29 @@
         <li class="main__li">zadanie-10
             <button class="main__button main__button--done">done</button> <button class="main__button main__button--delete">delete</button>   
         </li>
-    </ol>
+    </ul>
 
     <script>
+
+       
+        const btnsDone = document.querySelectorAll("li.main__li button.main__button--done");
+
         const doneTask = (e) =>{
+            e.target.parentNode.style.transform = "translate(100%,0)";
+
             e.target.parentNode.style.textDecoration = "line-through";
             e.target.remove();
         }
         const deleteTask= (e) =>{
-            e.target.parentNode.remove();
+            // e.target.parentNode.style.transform = "translateX(100%)";
+            e.target.parentNode.style.transform = "translate(100%," + (100*btnsDone.length) + "%)";
+            setTimeout(function(){
+                e.target.parentNode.remove();
+            },500);
+            // e.target.parentNode.remove();
         }
 
-        document.querySelectorAll("li.main__li button.main__button--done").forEach(item => 
-        item.addEventListener("click",doneTask));
+        btnsDone.forEach(item => item.addEventListener("click",doneTask));
         document.querySelectorAll("li.main__li button.main__button--delete").forEach(item => 
         item.addEventListener("click",deleteTask));
     </script>
