--- a/appToDo/appToDo.html
+++ b/appToDo/appToDo.html
@@ -12,38 +12,38 @@
 <body>
   <article class="editor">
     <section class="editor__wrapper editor__wrapper--task">
-      <form action="" class="editor__panel editor__panel--task">
-        <label class="editor__label--category" for="editor__category">Choose category:</label>
+      <form action="task.js" class="editor__panel editor__panel--task">
+        <!-- <label class="editor__label--task" for="editor__category">Choose category:</label> -->
         <select name="editor__category" class="editor__category">
           <option value="Sport">Sport</option>
           <option value="School">School</option>
           <option value="Important">Important</option>
           Category:
         </select>
-        <label class="editor__label--describe" for="editor__describe">Write your task:</label>
-        <input type="text" class="editor__describe" value="My task" />
+        <!-- <label class="editor__label--task" for="editor__describe--task">Write your task:</label> -->
+        <input type="text" class="editor__describe--task" value="My task" />
         <input type="submit" class="editor__submit--task" value="Add" />
       </form>
     </section>
 
-    <section class="editor__wrapper editor__wrapper--search">
+    <section class="editor__wrapper editor__wrapper--search ">
       <form action="" class="editor__panel editor__panel--search">
-        <label class="editor__label--search" for="editor__search">Search:</label>
-        <input class="editor__search" type="text" />
+        <!-- <label class="editor__label--search" for="editor__search">Search:</label> -->
+        <input value="Search" class="editor__search" type="text" />
       </form>
       <button class="editor__create">Create Category</button>
     </section>
 
-    <section class="editor__wrapper editor__wrapper--category">
+    <section class="editor__wrapper editor__wrapper--category off ">
       <form action="" class="editor__panel editor__panel--category">
-        <label class="editor__label" for="editor__red">Red</label>
-        <input class="editor__red editor__range" type="range" min="0" max="255" />
+        <label class="editor__label" for="editor__red">Red</labeoffl>
+          <input class="editor__red editor__range" type="range" min="0" max="255" />
 
-        <label class="editor__label" for="editor__green">Green</label>
-        <input class="editor__green editor__range" type="range" min="0" max="255" />
+          <label class="editor__label" for="editor__green">Green</label>
+          <input class="editor__green editor__range" type="range" min="0" max="255" />
 
-        <label class="editor__label" for="editor__blue">Blue</label>
-        <input class="editor__blue editor__range" type="range" min="0" max="255" />
+          <label class="editor__label" for="editor__blue">Blue</label>
+          <input class="editor__blue editor__range" type="range" min="0" max="255" />
       </form>
       <div class="editor__color"></div>
     </section>
