--- a/appToDo/appToDo.html
+++ b/appToDo/appToDo.html
@@ -12,7 +12,7 @@
 <body>
   <article class="editor">
     <section class="editor__wrapper editor__wrapper--task">
-      <form action="task.js" class="editor__panel editor__panel--task">
+      <form action="" class="editor__panel editor__panel--task">
         <!-- <label class="editor__label--task" for="editor__category">Choose category:</label> -->
         <select name="editor__category" class="editor__category">
           <option value="Sport">Sport</option>
@@ -36,14 +36,14 @@
 
     <section class="editor__wrapper editor__wrapper--category off ">
       <form action="" class="editor__panel editor__panel--category">
-        <label class="editor__label" for="editor__red">Red</labeoffl>
-          <input class="editor__red editor__range" type="range" min="0" max="255" />
+        <label class="editor__label" for="editor__red">Red</label>
+        <input class="editor__red editor__range" type="range" min="0" max="255" />
 
-          <label class="editor__label" for="editor__green">Green</label>
-          <input class="editor__green editor__range" type="range" min="0" max="255" />
+        <label class="editor__label" for="editor__green">Green</label>
+        <input class="editor__green editor__range" type="range" min="0" max="255" />
 
-          <label class="editor__label" for="editor__blue">Blue</label>
-          <input class="editor__blue editor__range" type="range" min="0" max="255" />
+        <label class="editor__label" for="editor__blue">Blue</label>
+        <input class="editor__blue editor__range" type="range" min="0" max="255" />
       </form>
       <div class="editor__color"></div>
     </section>
