--- a/appToDo/appToDo.html
+++ b/appToDo/appToDo.html
@@ -21,7 +21,8 @@
           Category:
         </select>
         <!-- <label class="editor__label--task" for="editor__describe--task">Write your task:</label> -->
-        <div class="editor__describe--task">My task</div>
+        <input type="text" class="editor__describe--task">
+        <!-- <div class="editor__describe--task">My task</div> -->
         <button class="editor__submit--task">Add</button>
       </div>
     </section>
@@ -46,11 +47,13 @@
         <input class="editor__blue editor__range" type="range" min="0" max="255" />
       </form>
       <div class="editor__color"></div>
+      <button class="editor__create">Create Category</button>
+
     </section>
   </article>
 
   <ul class="main">
-    <li class="main__li">
+    <!-- <li class="main__li">
       <button class="main__button main__button--done">done</button>
       <button class="main__button main__button--delete">delete</button>
       <p class="main__task">ogórek panie</p>
@@ -99,7 +102,7 @@
       <button class="main__button main__button--done">done</button>
       <button class="main__button main__button--delete">delete</button>
       <p class="main__task">zadanie szybkie</p>
-    </li>
+    </li> -->
   </ul>
 
   <script src="script.js"></script>
