--- a/appToDo/appToDo.html
+++ b/appToDo/appToDo.html
@@ -35,7 +35,17 @@
       <button class="editor__create">Create Category</button>
     </section>
 
-    <section class="editor__wrapper editor__wrapper--category off ">
+    <section class="editor__wrapper editor__wrapper--category off">
+      <form action="" class="editor__panel editor__panel--category">
+        <input value="New Category" class="editor__describe--category" type="text" />
+      </form>
+      <div class="editor__color--category"></div>
+      <div class="editor__nav">
+        <button class="editor__submit--category">Create</button>
+        <button class="editor__cancel--category">Back</button>
+      </div>
+    </section>
+    <!-- <section class="editor__wrapper editor__wrapper--category off ">
       <form action="" class="editor__panel editor__panel--category">
         <label class="editor__label" for="editor__red">Red</label>
         <input class="editor__red editor__range" type="range" min="0" max="255" />
@@ -48,8 +58,9 @@
       </form>
       <div class="editor__color"></div>
       <button class="editor__create">Create Category</button>
+    </section> -->
 
-    </section>
+
   </article>
 
   <ul class="main">
