--- a/appToDo/appToDo.html
+++ b/appToDo/appToDo.html
@@ -36,10 +36,8 @@
     </section>
 
     <section class="editor__wrapper editor__wrapper--category off">
-      <form action="" class="editor__panel editor__panel--category">
         <input value="New Category" class="editor__describe--category" type="text" />
-      </form>
-      <div class="editor__color--category"></div>
+        <input type="color" name="favcolor" value="#ff0000">
       <div class="editor__nav">
         <button class="editor__submit--category">Create</button>
         <button class="editor__cancel--category">Back</button>
