--- a/appToDo/appToDo.html
+++ b/appToDo/appToDo.html
@@ -39,43 +39,43 @@
 
     <section class="editor__wrapper editor__wrapper--category off">
         <input value="New Category" class="editor__describe--category colorCompose" type="text" />
-        <select name="editor__color--bgc" class="editor__color--bgc colorCompose">
+        <select name="editor__category--bgc" class="editor__category--bgc colorCompose">
           <option style="display: none" value="" class="editor__color editor__color--orange">background color</option>
-          <option value="" class="editor__color editor__color--bgc editor__color--FFF200"></option>
-          <option value="" class="editor__color editor__color--bgc editor__color--FD9406"></option>
-          <option value="" class="editor__color editor__color--bgc editor__color--FF0000"></option>
-          <option value="" class="editor__color editor__color--bgc editor__color--FF0080"></option>
-          <option value="" class="editor__color editor__color--bgc editor__color--0080FF"></option>
-          <option value="" class="editor__color editor__color--bgc editor__color--0000FF"></option>
-          <option value="" class="editor__color editor__color--bgc editor__color--004000"></option>
-          <option value="" class="editor__color editor__color--bgc editor__color--00FF00"></option>
-          <option value="" class="editor__color editor__color--bgc editor__color--1C2168"></option>
-          <option value="" class="editor__color editor__color--bgc editor__color--800080"></option>
-          <option value="" class="editor__color editor__color--bgc editor__color--804040"></option>
-          <option value="" class="editor__color editor__color--bgc editor__color--D74F6D"></option>
-          <option value="" class="editor__color editor__color--bgc editor__color--C0C0C0"></option>
-          <option value="" class="editor__color editor__color--bgc editor__color--008080"></option>
-          <option value="" class="editor__color editor__color--bgc editor__color--808000"></option>
-          <option value="" class="editor__color editor__color--bgc editor__color--80FF80"></option>
+          <option value="" class="editor__color editor__color--bgc editor__color--FFF200">#FFF200</option>
+          <option value="" class="editor__color editor__color--bgc editor__color--FD9406">#FD9406</option>
+          <option value="" class="editor__color editor__color--bgc editor__color--FF0000">#FF0000</option>
+          <option value="" class="editor__color editor__color--bgc editor__color--FF0080">#FF0080</option>
+          <option value="" class="editor__color editor__color--bgc editor__color--0080FF">#0080FF</option>
+          <option value="" class="editor__color editor__color--bgc editor__color--0000FF">#0000FF</option>
+          <option value="" class="editor__color editor__color--bgc editor__color--004000">#004000</option>
+          <option value="" class="editor__color editor__color--bgc editor__color--00FF00">#00FF00</option>
+          <option value="" class="editor__color editor__color--bgc editor__color--1C2168">#1C2168</option>
+          <option value="" class="editor__color editor__color--bgc editor__color--800080">#800080</option>
+          <option value="" class="editor__color editor__color--bgc editor__color--804040">#804040</option>
+          <option value="" class="editor__color editor__color--bgc editor__color--D74F6D">#D74F6D</option>
+          <option value="" class="editor__color editor__color--bgc editor__color--C0C0C0">#C0C0C0</option>
+          <option value="" class="editor__color editor__color--bgc editor__color--008080">#008080</option>
+          <option value="" class="editor__color editor__color--bgc editor__color--808000">#808000</option>
+          <option value="" class="editor__color editor__color--bgc editor__color--80FF80">#80FF80</option>
         </select>
-        <select name="editor__color--font" class="editor__color--font colorCompose">
+        <select name="editor__category--font" class="editor__category--font colorCompose">
           <option style="display: none" value="" class="editor__color editor__color--orange">font color</option>
-          <option value="" class="editor__color editor__color--font editor__color--FFF200"></option>
-          <option value="" class="editor__color editor__color--font editor__color--FD9406"></option>
-          <option value="" class="editor__color editor__color--font editor__color--FF0000"></option>
-          <option value="" class="editor__color editor__color--font editor__color--FF0080"></option>
-          <option value="" class="editor__color editor__color--font editor__color--0080FF"></option>
-          <option value="" class="editor__color editor__color--font editor__color--0000FF"></option>
-          <option value="" class="editor__color editor__color--font editor__color--004000"></option>
-          <option value="" class="editor__color editor__color--font editor__color--00FF00"></option>
-          <option value="" class="editor__color editor__color--font editor__color--1C2168"></option>
-          <option value="" class="editor__color editor__color--font editor__color--800080"></option>
-          <option value="" class="editor__color editor__color--font editor__color--804040"></option>
-          <option value="" class="editor__color editor__color--font editor__color--D74F6D"></option>
-          <option value="" class="editor__color editor__color--font editor__color--C0C0C0"></option>
-          <option value="" class="editor__color editor__color--font editor__color--008080"></option>
-          <option value="" class="editor__color editor__color--font editor__color--808000"></option>
-          <option value="" class="editor__color editor__color--font editor__color--80FF80"></option>
+          <option value="" class="editor__color editor__color--font editor__color--FFF200">#FFF200</option>
+          <option value="" class="editor__color editor__color--font editor__color--FD9406">#FD9406</option>
+          <option value="" class="editor__color editor__color--font editor__color--FF0000">#FF0000</option>
+          <option value="" class="editor__color editor__color--font editor__color--FF0080">#FF0080</option>
+          <option value="" class="editor__color editor__color--font editor__color--0080FF">#0080FF</option>
+          <option value="" class="editor__color editor__color--font editor__color--0000FF">#0000FF</option>
+          <option value="" class="editor__color editor__color--font editor__color--004000">#004000</option>
+          <option value="" class="editor__color editor__color--font editor__color--00FF00">#00FF00</option>
+          <option value="" class="editor__color editor__color--font editor__color--1C2168">#1C2168</option>
+          <option value="" class="editor__color editor__color--font editor__color--800080">#800080</option>
+          <option value="" class="editor__color editor__color--font editor__color--804040">#804040</option>
+          <option value="" class="editor__color editor__color--font editor__color--D74F6D">#D74F6D</option>
+          <option value="" class="editor__color editor__color--font editor__color--C0C0C0">#C0C0C0</option>
+          <option value="" class="editor__color editor__color--font editor__color--008080">#008080</option>
+          <option value="" class="editor__color editor__color--font editor__color--808000">#808000</option>
+          <option value="" class="editor__color editor__color--font editor__color--80FF80">#80FF80</option>
         </select>
         <!-- <input type="color" name="favcolor" value="#ff0000"> -->
       <div class="editor__nav--category">
