select changed, local json grow
we need to put all categorys in another div to display this div on click, than on of it element click -> pick category..

--- a/appToDo/appToDo.html
+++ b/appToDo/appToDo.html
@@ -13,9 +13,9 @@
   <article class="editor">
     <section class="editor__wrapper editor__wrapper--task">
       <div class="editor__panel editor__panel--task">
-        <select name="editor__category" class="editor__category colorCompose">
+        <div name="editor__category" class="editor__category colorCompose">
           <!-- add ur category -->
-        </select>
+        </div>
         <input type="text" class="editor__describe--task">
         <button class="editor__submit--task">Add</button>
       </div>
