--- a/appToDo/appToDo.html
+++ b/appToDo/appToDo.html
@@ -16,6 +16,8 @@
         <div name="editor__category" class="editor__category colorCompose">
           <!-- add ur category -->
         </div>
+        <div class="editor__categorys"></div>
+
         <input type="text" class="editor__describe--task">
         <button class="editor__submit--task">Add</button>
       </div>
