--- a/appToDo/appToDo.html
+++ b/appToDo/appToDo.html
@@ -14,9 +14,10 @@
     <section class="editor__wrapper editor__wrapper--task">
       <div class="editor__panel editor__panel--task">
         <div name="editor__category" class="editor__category colorCompose">
+        </div>
+        <div class="editor__categorys">
           <!-- add ur category -->
         </div>
-        <div class="editor__categorys"></div>
 
         <input type="text" class="editor__describe--task">
         <button class="editor__submit--task">Add</button>
