--- a/appToDo/appToDo.html
+++ b/appToDo/appToDo.html
@@ -14,6 +14,7 @@
     <section class="editor__wrapper editor__wrapper--task">
       <div class="editor__panel editor__panel--task">
         <div name="editor__category" class="editor__category colorCompose">
+          Choose category
         </div>
         <div class="editor__categorys">
           <!-- add ur category -->
