--- a/react 2 propa src for production/index.html
+++ b/react 2 propa src for production/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="pl">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Example</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Example</title>
+  <body>
+    <div id="root">
+      <!-- kontener na aplikację react  -->
+    </div>
+    <script crossorigin src="react/react.min.js"></script>
+    <script crossorigin src="react/react-dom.min.js"></script>
+    <script src="react/babel.min.js"></script>
 
-</head>
-
-<body>
-  <div id="root">
-    <!-- kontener na aplikację react  -->
-  </div>
-  <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
-  <script type="text/babel" src="App.js"></script>
-</body>
-
+    <script type="text/babel" src="App.js"></script>
+  </body>
 </html>
