--- a/appToDo/appToDo.html
+++ b/appToDo/appToDo.html
@@ -19,7 +19,6 @@
         <div class="editor__categorys">
           <!-- add ur category -->
         </div>
-
         <input type="text" class="editor__describe--task">
         <button class="editor__submit--task">Add</button>
       </div>
@@ -81,11 +80,11 @@
 
   <ul class="main">
     <!-- add ur task -->
-
     <!-- <li class="main__li">
-      <button class="main__button main__button--done">done</button>
-      <button class="main__button main__button--delete">delete</button>
+      <button class="main__button main__button--done"></button>
       <p class="main__task">zadanie szybkie</p>
+      <button class="main__button main__button--edit"></button>
+      <button class="main__button main__button--delete"></button>
     </li> -->
   </ul>
 
