--- a/appToDo/appToDo.html
+++ b/appToDo/appToDo.html
@@ -35,6 +35,8 @@
       <input value="New Category" class="editor__describe--category colorCompose" type="text" />
       <select name="editor__category--bgc" class="editor__category--bgc colorCompose">
         <option style="display: none" value="" class="editor__color editor__color--orange">background color</option>
+        <option value="" class="editor__color editor__color--bgc editor__color--000000">#000000</option>
+        <option value="" class="editor__color editor__color--bgc editor__color--FFFFFF">#FFFFFF</option>
         <option value="" class="editor__color editor__color--bgc editor__color--FFF200">#FFF200</option>
         <option value="" class="editor__color editor__color--bgc editor__color--FD9406">#FD9406</option>
         <option value="" class="editor__color editor__color--bgc editor__color--FF0000">#FF0000</option>
@@ -54,6 +56,8 @@
       </select>
       <select name="editor__category--font" class="editor__category--font colorCompose" id="editor__category--font">
         <option style="display: none" value="" class="editor__color editor__color--orange">font color</option>
+        <option value="" class="editor__color editor__color--bgc editor__color--000000">#000000</option>
+        <option value="" class="editor__color editor__color--bgc editor__color--FFFFFF">#FFFFFF</option>
         <option value="" class="editor__color editor__color--font editor__color--FFF200">#FFF200</option>
         <option value="" class="editor__color editor__color--font editor__color--FD9406">#FD9406</option>
         <option value="" class="editor__color editor__color--font editor__color--FF0000">#FF0000</option>
@@ -87,6 +91,11 @@
       <button class="main__button main__button--delete"></button>
     </li> -->
   </ul>
+  <footer class="footer">
+    <address class="footer__adress">
+      ToDo &copy; Brianwala22@gmail.com
+    </address>
+  </footer>
 
   <script src="script.js"></script>
 </body>
