--- a/zuperPortfolioPrace/5/index.html
+++ b/zuperPortfolioPrace/5/index.html
@@ -7,7 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Flubmaster</title>
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="header.css" />
+  <link rel="stylesheet" href="products.css" />
+  <link rel="stylesheet" href="extra.css" />
+
+
 </head>
 
 <body>
@@ -95,14 +99,14 @@
         </section>
         <!-- product img section -->
         <section class="product__img product__img--first">
-          <img class="img" src="" alt="first product image" />
+          <img class="img" src="img/post1.jpg" alt="first product image" />
         </section>
       </article>
       <!-- main product article 2-->
       <article class="main__product">
         <!-- product img section 2-->
         <section class="product__img product__img--second">
-          <img class="img" src="" alt="second product image" />
+          <img class="img" src="img/post2.jpg" alt="second product image" />
         </section>
         <!-- product describe section 2-->
         <section class="product__describe product__describe--second">
@@ -157,6 +161,9 @@
   <!-- footer footer -->
 
   <!--Skrypty-->
+  <!-- autorzy designu -->
+  <a href="https://www.freepik.com/free-photos-vectors/background">Background psd created by graphictwister -
+    www.freepik.com</a>
   <script src="script.js"></script>
 </body>
 
