--- a/zuperPortfolioPrace/5/index.html
+++ b/zuperPortfolioPrace/5/index.html
@@ -7,6 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Flubmaster</title>
 
+  <link rel="stylesheet" href="fontello-432147e9/css/lyrics.css">
+
+  <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
   <link rel="stylesheet" href="header.css" />
   <link rel="stylesheet" href="products.css" />
   <link rel="stylesheet" href="about.css" />
@@ -25,8 +28,10 @@
       <!-- hamburger menu -->
       <nav class="header__nav header__nav--hamb">
         <!-- <div class="hamb__ico"></div>     hamburger ico -->
-        <span class="hamb__label">menu</span>
-        <ul class="hamb__list displayNone">
+        <span class="icon-menu"></span>
+        <span class="hamb__label"> menu</span>
+        <ul class="hamb__list displayNone ">
+          <li class="hamb__option menu__option--logo">flubmaster</li>
           <li class="hamb__option">home</li>
           <li class="hamb__option">products</li>
           <li class="hamb__option">about</li>
@@ -35,7 +40,7 @@
       <!-- main menu -->
       <nav class="header__nav header__nav--menu">
         <ul class="menu__list">
-          <li class="menu__option menu__option--logo"></li>
+          <li class="menu__option menu__option--logo">flubmaster</li>
           <li class="menu__option">home</li>
           <li class="menu__option">products</li>
           <li class="menu__option">about</li>
@@ -91,7 +96,7 @@
       <article class="main__product">
         <!-- product describe section -->
         <section class="product__describe product__describe--first">
-          <h2 class="product__h2 product__h2--first">Furniture</h2>
+          <h2 class="product__h2 product__h2--first">BBQ</h2>
           <p class="product__p product__p--first">
             The best of the best bla bla bla intead of liberum opsa sa librum
             ipsum libre. The best of the best bla bla bla intead of liberum
@@ -112,7 +117,7 @@
         </section>
         <!-- product describe section 2-->
         <section class="product__describe product__describe--second">
-          <h2 class="product__h2 product__h2--second">Furniture</h2>
+          <h2 class="product__h2 product__h2--second">BOAT</h2>
           <p class="product__p product__p--second">
             The best of the best bla bla bla intead of liberum opsa sa librum
             ipsum libre. The best of the best bla bla bla intead of liberum
