--- a/zuperPortfolioPrace/5/index.html
+++ b/zuperPortfolioPrace/5/index.html
@@ -28,7 +28,7 @@
       <!-- hamburger menu -->
       <nav class="header__nav header__nav--hamb">
         <!-- <div class="hamb__ico"></div>     hamburger ico -->
-        <span class="icon-menu"></span>
+        <a class="icon-menu"></a>
         <span class="hamb__label"> menu</span>
         <ul class="hamb__list displayNone ">
           <li class="hamb__option menu__option--logo">flubmaster</li>
@@ -77,8 +77,8 @@
         <h1 class="slide__h1">Flubmaster</h1>
         <button class="slide__button">Learn more</button>
         <div class="slide__info">
-          <img src="" alt="scroll down image" class="slide__mouse" />
-          <span class="slide__direction"></span>
+          <a class="icon-mouse slide__mouse"></a>
+          <span class="slide__direction">scroll</span>
         </div>
       </article>
       <!-- header side label -->
@@ -99,8 +99,7 @@
           <h2 class="product__h2 product__h2--first">BBQ</h2>
           <p class="product__p product__p--first">
             The best of the best bla bla bla intead of liberum opsa sa librum
-            ipsum libre. The best of the best bla bla bla intead of liberum
-            opsa sa librum ipsum libre.
+            ipsum libre.
           </p>
           <a href="#" class="product__a product__a--first">Learn more</a>
         </section>
@@ -120,8 +119,7 @@
           <h2 class="product__h2 product__h2--second">BOAT</h2>
           <p class="product__p product__p--second">
             The best of the best bla bla bla intead of liberum opsa sa librum
-            ipsum libre. The best of the best bla bla bla intead of liberum
-            opsa sa librum ipsum libre.
+            ipsum libre.
           </p>
           <a href="#" class="product__a product__a--second">Learn more</a>
         </section>
