--- a/zuperPortfolioPrace/5/index.html
+++ b/zuperPortfolioPrace/5/index.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="fontello-432147e9/css/lyrics.css">
 
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster" />
   <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
   <link rel="stylesheet" href="header.css" />
   <link rel="stylesheet" href="products.css" />
@@ -31,9 +32,9 @@
         <a class="icon-menu"></a>
         <span class="hamb__label"> menu</span>
         <ul class="hamb__list displayNone ">
-          <li class="hamb__option menu__option--logo">flubmaster</li>
+          <li class="hamb__option hamb__option--logo">flubmaster</li>
           <li class="hamb__option">home</li>
-          <li class="hamb__option">products</li>
+          <li class="hamb__option">Videos</li>
           <li class="hamb__option">about</li>
         </ul>
       </nav>
@@ -42,7 +43,7 @@
         <ul class="menu__list">
           <li class="menu__option menu__option--logo">flubmaster</li>
           <li class="menu__option">home</li>
-          <li class="menu__option">products</li>
+          <li class="menu__option">Videos</li>
           <li class="menu__option">about</li>
         </ul>
       </nav>
