--- a/zuperPortfolioPrace/5/index.html
+++ b/zuperPortfolioPrace/5/index.html
@@ -97,7 +97,7 @@
       <article class="main__product">
         <!-- product describe section -->
         <section class="product__describe product__describe--first">
-          <h2 class="product__h2 product__h2--first"><span style="color :black">BB</span>Q </h2>
+          <h2 class="product__h2 product__h2--first"><span style="color :black">B</span>BQ</h2>
           <p class="product__p product__p--first">
             The best of the best bla bla bla intead of liberum opsa sa librum
             ipsum libre.
@@ -110,7 +110,7 @@
         </section>
       </article>
       <!-- main product article 2-->
-      <article class="main__product">
+      <article class="main__product main__product--second">
         <!-- product img section 2-->
         <section class="product__img product__img--second">
           <img class="img" src="img/post2.jpg" alt="second product image" />
