--- a/zuperPortfolioPrace/5/index.html
+++ b/zuperPortfolioPrace/5/index.html
@@ -13,6 +13,7 @@
   <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
   <link rel="stylesheet" href="header.css" />
   <link rel="stylesheet" href="products.css" />
+  <link rel="stylesheet" href="products3.css" />
   <link rel="stylesheet" href="about.css" />
   <link rel="stylesheet" href="footer.css" />
   <link rel="stylesheet" href="extra.css" />
@@ -24,10 +25,13 @@
   <!-- header -->
   <!-- navigation -->
   <header class="header">
+
     <!-- nav wrapper  -->
     <div class="nav__wrapper">
+
       <!-- hamburger menu -->
       <nav class="header__nav header__nav--hamb">
+
         <!-- <div class="hamb__ico"></div>     hamburger ico -->
         <a class="icon-menu"></a>
         <span class="hamb__label"> menu</span>
@@ -38,6 +42,7 @@
           <li class="hamb__option">about</li>
         </ul>
       </nav>
+
       <!-- main menu -->
       <nav class="header__nav header__nav--menu">
         <ul class="menu__list">
@@ -47,6 +52,7 @@
           <li class="menu__option">about</li>
         </ul>
       </nav>
+
       <!-- options menu -->
       <nav class="header__nav header__nav--languages">
         EN
@@ -91,46 +97,55 @@
 
   <!-- main -->
   <main class="main">
+
     <!-- main wrapper 100 width bgc -->
     <section class="main__wrapper main__wrapper--white">
       <!-- main product article -->
-      <article class="main__product">
+
+      <article class="main__product main__product--first">
+
         <!-- product describe section -->
         <section class="product__describe product__describe--first">
-          <h2 class="product__h2 product__h2--first"><span style="color :black">B</span>BQ</h2>
+          <h2 class="product__h2 product__h2--first">BBQ</h2>
           <p class="product__p product__p--first">
             The best of the best bla bla bla intead of liberum opsa sa librum
-            ipsum libre.
+            ipsum.
           </p>
           <a href="#" class="product__a product__a--first">Learn more</a>
         </section>
+
         <!-- product img section -->
         <section class="product__img product__img--first">
-          <img class="img" src="img/post1.jpg" alt="first product image" />
+          <img class="img" src="img/2.jpg" alt="first product image" />
         </section>
       </article>
+
       <!-- main product article 2-->
       <article class="main__product main__product--second">
+
         <!-- product img section 2-->
         <section class="product__img product__img--second">
-          <img class="img" src="img/post2.jpg" alt="second product image" />
+          <img class="img" src="img/1.jpg" alt="second product image" />
         </section>
+
         <!-- product describe section 2-->
         <section class="product__describe product__describe--second">
           <h2 class="product__h2 product__h2--second">BOAT</h2>
           <p class="product__p product__p--second">
             The best of the best bla bla bla intead of liberum opsa sa librum
-            ipsum libre.
+            ipsum.
           </p>
           <a href="#" class="product__a product__a--second">Learn more</a>
         </section>
       </article>
+
       <!--main products article -->
       <article class="main__product main__product--thirt">
+
         <!-- products describe section -->
         <section class="product__describe product__describe--thirt">
           <!-- products describe h2 -->
-          <h2 class="product__h2 product__h2--thirt"></h2>
+          <h2 class="product__h2 product__h2--thirt">Flubmaster - is quality</h2>
           <!-- products describe p -->
           <p class="product__p">
             The best of the best bla bla bla intead of liberum opsa sa librum
@@ -138,26 +153,34 @@
             opsa sa librum ipsum libre.
           </p>
         </section>
+
         <!-- product iframes section -->
         <section class="product__iframes">
+
           <!-- iframe and label -->
           <section class="product__iframe product__iframe--first">
             <iframe src="" frameborder="0" class="iframe"></iframe>
             <span class="product__label">Innovative Design</span>
           </section>
+
           <!-- iframe and label -->
           <section class="product__iframe product__iframe--second">
             <iframe src="" frameborder="0" class="iframe"></iframe>
             <span class="product__label">High-level Skills</span>
           </section>
+
           <!-- iframe and label -->
           <section class="product__iframe product__iframe--thirt">
             <iframe src="" frameborder="0" class="iframe"></iframe>
             <span class="product__label">Quality Products</span>
           </section>
+
         </section>
+
       </article>
+
     </section>
+
     <!-- white wrapper END -->
 
     <!-- section wood wrapper -->
