--- a/zuperPortfolioPrace/5/index.html
+++ b/zuperPortfolioPrace/5/index.html
@@ -22,6 +22,14 @@
 </head>
 
 <body>
+  <form action="" class="adventureSendButton">
+    <div>
+      <input type="text">
+      <input type="text">
+      <input type="text">
+      <input type="text">
+    </div>
+  </form>
   <!-- header -->
   <!-- navigation -->
   <header class="header">
@@ -73,7 +81,7 @@
 
       <div class="slider__counter">
         <span class="counter__number">01</span>
-        <span class="counter__dot"></span>
+        <span class="counter__dot counter__dot--selected"></span>
         <span class="counter__dot"></span>
         <span class="counter__dot"></span>
         <span class="counter__dot"></span>
