--- a/zuperPortfolioPrace/5/index.html
+++ b/zuperPortfolioPrace/5/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="header.css" />
   <link rel="stylesheet" href="products.css" />
   <link rel="stylesheet" href="products3.css" />
+  <link rel="stylesheet" href="weDo.css" />
   <link rel="stylesheet" href="about.css" />
   <link rel="stylesheet" href="footer.css" />
   <link rel="stylesheet" href="extra.css" />
@@ -147,7 +148,7 @@
           <!-- products describe h2 -->
           <h2 class="product__h2 product__h2--thirt">Flubmaster - is quality</h2>
           <!-- products describe p -->
-          <p class="product__p">
+          <p class="product__p product__p--thirt">
             The best of the best bla bla bla intead of liberum opsa sa librum
             ipsum libre. The best of the best bla bla bla intead of liberum
             opsa sa librum ipsum libre.
@@ -159,19 +160,19 @@
 
           <!-- iframe and label -->
           <section class="product__iframe product__iframe--first">
-            <iframe src="" frameborder="0" class="iframe"></iframe>
+            <iframe src="https://www.youtube.com" frameborder="0" class="iframe"></iframe>
             <span class="product__label">Innovative Design</span>
           </section>
 
           <!-- iframe and label -->
           <section class="product__iframe product__iframe--second">
-            <iframe src="" frameborder="0" class="iframe"></iframe>
+            <iframe src="https://www.youtube.com" frameborder="0" class="iframe"></iframe>
             <span class="product__label">High-level Skills</span>
           </section>
 
           <!-- iframe and label -->
           <section class="product__iframe product__iframe--thirt">
-            <iframe src="" frameborder="0" class="iframe"></iframe>
+            <iframe src="https://www.youtube.com" frameborder="0" class="iframe"></iframe>
             <span class="product__label">Quality Products</span>
           </section>
 
